# agentcrew

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/git/: mod.rs
