[package]
name = "agentcrew"
version = "0.1.0"
edition = "2021"
description = "Parallel AI agent orchestration in separate git worktrees"
license = "MIT"
repository = "https://github.com/your-org/agentcrew"
readme = "README.md"
keywords = ["ai", "agents", "git", "worktree", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.20"
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.20"